# Copyright 2019 The Hafnium Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/toolchain/offset_size_header.gni")
import("//src/arch/aarch64/args.gni")

offset_size_header("offsets") {
  sources = [
    "offsets.c",
  ]
  path = "hf/arch/offsets.h"
}

# Hypervisor specific code.
source_set("hypervisor") {
  public_configs = [ "//src/arch/aarch64:config" ]
  sources = [
    "exceptions.S",
    "hypervisor_entry.S",
    "plat_entry.S",
  ]

  sources += [
    "cpu.c",
    "debug_el1.c",
    "feature_id.c",
    "handler.c",
    "perfmon.c",
    "psci_handler.c",
    "vm.c",
  ]

  deps = [
    ":offsets",
    "//src/arch/aarch64:arch",
    "//src/arch/aarch64:entry",
    "//src/arch/aarch64:smc",
    plat_smc,
  ]
}
