# Copyright 2019 The Hafnium Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/image/image.gni")

group("arch") {
  testonly = true

  deps = [
    ":aarch64_test",
  ]
}

# Tests specific to aarch64.
vm_kernel("aarch64_test_vm") {
  testonly = true
  public_configs = [ "//src/arch/aarch64:config" ]

  sources = [
    "arch_features.c",
    "smc_whitelist.c",
    "smccc.c",
  ]

  deps = [
    "//src/arch/aarch64:arch",
    "//test/hftest:hftest_primary_vm",
  ]
}

initrd("aarch64_test") {
  testonly = true

  manifest = "manifest.dts"
  primary_name = "aarch64_test"
  primary_vm = ":aarch64_test_vm"
}
